Tasks overflow, drag 'n drop fixes

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -440,6 +440,8 @@ main .table {
 .table-body {
     flex-grow: 1;
     width: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 .table .table-tasks {
@@ -449,8 +451,10 @@ main .table {
     align-items: flex-start;
     gap: 10px;
     overflow-x: auto;
+    overflow-y: hidden;
 
     height: 100%;
+
 }
 
 .table .major-task {
@@ -472,6 +476,9 @@ main .table {
 
     min-width: 200px;
     max-width: 250px;
+
+    max-height: calc(100% - 20px);
+    overflow: hidden;
 }
 
 .table .major-task h3 {
@@ -491,6 +498,8 @@ main .table {
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
+
+    overflow-y: auto;
 }
 .table .task {
     background-color: rgb(var(--primary-dark-rgb), 0.15);
@@ -622,6 +631,8 @@ main .table {
     display: flex;
     flex-direction: row;
     gap: 5px;
+
+    flex-shrink: 0;
 
     width: 100%;
 }
